--- a/PythonDockerFlaskPycharm/app/Dockerfile
+++ b/PythonDockerFlaskPycharm/app/Dockerfile
@@ -7,8 +7,7 @@ WORKDIR /app
 COPY requirements.txt /app
 RUN pip install -r requirements.txt
 
-COPY app.py /app
+COPY . /app
 CMD python app.py
-
 
 
